Fix per regression in probing.

BUG=chromium:687030

Review-Url: https://codereview.webrtc.org/2664193002
Cr-Commit-Position: refs/heads/master@{#16381}